# tsmath

./: CMakeLists.txt  lin_alg.h  matrix.cpp  matrix.h  vector.cpp  vector.h
include/: lin_alg.h  macros.h  matrix.h  vector.h
src/: lin_alg.cpp  main.cpp  matrix.cpp  vector.cpp
